[metadata]
name = moonrise
version = 1.0.0
author = Christopher Diamond-Jones
author_email = christopher.jones1138@gmail.com
description = All-in-one test suite creation toolset and quality of life upgrades for the selenium framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Worakow1138/Moonrise
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    selenium
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    moonrise = moonrise.__main__:run_cli